--- a/SocializingSkill/i18n/default.json
+++ b/SocializingSkill/i18n/default.json
@@ -1,30 +1,30 @@
 ﻿{
-    "skill.name": "Socializing",
-    "skill.perk": "{{bonus}}% chance no daily friendship decay",
+    "skill.name": "Social",
+    "skill.perk": "{{bonus}}% de chances qu'aucune amitié ne se dégrade au quotidien",
 
-    "friendly.name": "Friendly",
-    "friendly.desc": "Gain additional friendship from talking to villagers",
-    "smoothtalker.name": "Smooth Talker",
-    "smoothtalker.desc": "Gain more friendship (and lose less) during heart events",
-    "gifter.name": "Gifter",
-    "gifter.desc": "Gain additional friendship from giving gifts",
-    "helpful.name": "Helpful",
-    "helpful.desc": "Gain additional quest rewards",
-    "haggler.name": "Haggler",
-    "haggler.desc": "Get a discount at shops when you are friends with the owner",
-    "beloved.name": "Beloved",
-    "beloved.desc": "Sometimes get gifts from your friends",
+    "friendly.name": "Beau parleur",
+    "friendly.desc": "Gagnez de l'amitié supplémentaire en parlant aux villageois",
+    "smoothtalker.name": "Charmeur",
+    "smoothtalker.desc": "Gagnez de l'amitié suplémentaire (et perdez en moins) lors des évènements de coeur",
+    "gifter.name": "Philantrope",
+    "gifter.desc": "Gagnez de l'amitié supplémentaire en offrant des cadeaux",
+    "helpful.name": "Bienfaiteur",
+    "helpful.desc": "Gagnez davantage de récompenses en accomplissant les quêtes des villageois",
+    "haggler.name": "Négociateur",
+    "haggler.desc": "Bénéficiez d'une réduction dans les magasins lorsque vous êtes ami avec le propriétaire",
+    "beloved.name": "Bien-aimé",
+    "beloved.desc": "Recevez parfois des cadeaux de la part de vos amis",
 
-    "friendly.prestige.desc": "Gain even more additional friendship from talking to villagers",
-    "smoothtalker.prestige.desc": "Gain even more friendship (and lose none) during heart events",
-    "gifter.prestige.desc": "Gain even more friendship from giving gifts",
-    "helpful.prestige.desc": "Gain even more quest rewards",
-    "haggler.prestige.desc": "Get a discount at shops when you are friends with the owner",
-    "beloved.prestige.desc": "Often get gifts from your friends",
+    "friendly.prestige.desc": "Gagnez encore plus d'amitié en parlant aux villageois",
+    "smoothtalker.prestige.desc": "Gagnez encore plus d'amitié (et perdez en moins) lors des évènements de coeur",
+    "gifter.prestige.desc": "Gagnez encore plus d'amitié en offrant des cadeaux",
+    "helpful.prestige.desc": "Gagnez encore plus de récompenses en accompissant les quêtes des villageois",
+    "haggler.prestige.desc": "Bénéficiez de réductions dans les magasins lorsque vous êtes ami avec le propriétaire",
+    "beloved.prestige.desc": "Recevez souvent des cadeaux de vos amis",
 
-    "dialogue.beloved": "Take this.  I found it lying around the house.",
-    "dialogue.beloved.rare": "Hey {{name}}, I think you might like this.",
-    "dialogue.beloved.superrare": "I saw this, and I knew you'd love it.",
+    "dialogue.beloved": "Tiens, prends ça. Ça trainait dans la maison.",
+    "dialogue.beloved.rare": "Coucou {{name}}, je pense que tu pourrais aimer ça!",
+    "dialogue.beloved.superrare": "Quand je l'ai vu, j'ai tout de suite pensé que tu adorerait ça!",
 
     "config.ExperienceModifiers": "Experience Modifiers",
     "config.SkillPerkModifiers": "Skill Perk Modifiers",
